# 9-practica-pollimorfismosalario-Esteban-Monroy

./: CMakeLists.txt  DesarrolladorJunior.cpp  DesarrolladorJunior.h  DesarrolladorSenior.cpp  DesarrolladorSenior.h  Empleado.cpp  Empleado.h  LiderTecnico.cpp  LiderTecnico.h  Nomina.cpp  Nomina.h  README.md  Tester.cpp  Tester.h  main.cpp
